# Agent-SEO

./: .env.example  .gitignore  PRD.MD  README.md  main.py  pyproject.toml  requirements.txt  telegram_bot.py  test_wordpress.py
.kiro/skills/: aeo-rewrite.md
agents/: __init__.py  base.py
agents/approval/: __init__.py  agent.py
agents/fetcher/: __init__.py  agent.py
agents/keyword/: __init__.py  agent.py
agents/monitor/: __init__.py  agent.py
agents/planner/: __init__.py  agent.py
agents/publisher/: __init__.py  agent.py
agents/research/: __init__.py  agent.py
agents/reviewer/: __init__.py  agent.py
agents/rewriter/: __init__.py  agent.py
agents/seo/: __init__.py  agent.py
agents/topic_selector/: agent.py
config/: project_memory.json  providers.yaml  settings.yaml
gateway/: __init__.py  cache.py  fetcher.py  limiter.py  logger.py  provider.py  retry.py  router.py  security.py
knowledge/: __init__.py  loader.py
memory/: __init__.py  longterm.py  project.py  session.py
output/: Operator_Utama_Sistem_Informasi_Geografi_631cb7772afe.md  Sertifikasi_GIS_BNSP_ac6d7569d21a.md  digital_marketing_untuk_UMKM_0fd29b4c5e0e.md  strategi_content_marketing_untuk_startup_1db85610a8b4.md
prompts/: aeo_diagnosis.txt  keyword.txt  monitor.txt  planner.txt  publisher.txt  research.txt  reviewer.txt  rewriter.txt  seo.txt  trends.txt  writer.txt
schemas/: __init__.py  agent_io.py  workflow.py
security/: __init__.py  input_guard.py  output_guard.py
workflows/: rewrite_article.yaml  seo_article.yaml  simple_article.yaml  trends_article.yaml
(+11 files in other folders)
